@@ -1,6 +1,5 @@
 package io.jeyong.detector.context;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -13,7 +12,6 @@ final class QueryLog {
     }
 
     public Map<String, Long> getNPlusOneQueries() {
-        // Using Collections.unmodifiableMap for Java 8 compatibility
-        return Collections.unmodifiableMap(queryOccurrences);
+        return Map.copyOf(queryOccurrences);
     }
 }
